# TL-cbs

./: .gitignore  README.md  TL-Editor-v0.1.0-initial.rar  TL-Editor-v0.1.1-expressions.rar
TL-Editor/: .gitignore  README.md  metaborg.yaml  pom.xml
TL-Editor/editor/: Main.esv  Syntax.esv
TL-Editor/syntax/: Stratego-TL.sdf  TL.sdf3
TL-Editor/trans/: Stratego-TL.tbl  generate.str  outline.str  pp.str  tl.str
TL-Tests/: .gitignore  .project  .project.orig  TL-1.spt  TL-2.spt  TL-3.spt  TL-rejected.spt  TL.config  compare-tests.sh  create-config.sh  migrating-to-SPT.sh  regen-funcons.sh  run-tests.sh
TL-Tests/TL-1/: arit1-assoc.aterm  arit1-assoc.config  arit1-assoc.fct  arit1-assoc.output  arit1-assoc.tl  arit1.aterm  arit1.config  arit1.fct  arit1.output  arit1.tl  bool-eq.aterm  bool-eq.fct  bool-eq.tl  bool-not.aterm  bool-not.fct  bool-not.output  bool-not.tl  bool1.aterm  bool1.fct  bool1.output  bool1.tl  bool2.aterm  bool2.config  bool2.fct  bool2.output  bool2.pp.output  bool2.pp.tl  bool2.tl  div.aterm  div.config  div.fct  div.output  div.tl  div0.aterm  div0.fct  div0.tl  id.aterm  id.fct  id.output  id2.aterm  (+14 more)
TL-Tests/TL-2/: if-stmt-id.aterm  if-stmt-id.fct  if-stmt-id.output  if-stmt-id.tl  if-stmt.aterm  if-stmt.config  if-stmt.fct  if-stmt.output  if-stmt.pp.fct  if-stmt.pp.output  if-stmt.pp.tl  if-stmt.tl  product.aterm  product.config  product.fct  (+45 more)
TL-cbs/: .gitignore  .project  Funcons-beta
funcons-TL/: funcons-TL.cabal
funcons-TL/src/: Main.hs
funcons-TL/src/Funcons/TL/: Library.hs
funcons-TL/src/Funcons/TL/Custom/: Custom.hs
(+211 files in other folders)
